--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,18 @@
 fastapi==0.115.0
 uvicorn==0.30.1
 sqlalchemy==2.0.35
-pydantic==2.9.2
+pydantic==2.11.7
 pydantic-settings==2.4.0
 python-dotenv==1.0.1
 requests==2.32.3
 beautifulsoup4==4.12.3
-google-generativeai==0.8.5
-langchain==0.3.7
-langchain-google-genai==1.0.4
+
+# ✅ Gemini + LangChain (compatible versions)
+google-generativeai==0.5.4
+langchain==0.1.20
+langchain-core==0.1.53
+langchain-google-genai==1.0.3
+langchain-community==0.0.38
+
+# Optional utilities
+tenacity==8.5.0
